objects/Cap__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cap</relationshipLabel>
        <relationshipName>Caps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cap_Comments_Recipients__c</fullName>
        <label>Cap Comments Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cap_Comments__c</fullName>
        <label>Cap Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Cap</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Cap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cap</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>